package br.com.sigrest.api.entity;

public enum ProductType {
    INSUMO,
    PRODUTO_FINAL,
    PRODUTO_INTERMEDIARIO
}